2000-11-26  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.h: Eliminate a warning by making the Audio constructor protected, rather than private.
	* actors.cc: const police
	* audio/xmidi.cc: Initialise status
	* menulist.h: const police
	* menulist.h: initialisers in declaration order
	* game.h: const police
	* gamewin.h: initialisers in declaration order
	* gumps.h: const police
	* gumps.cc: const police
	* schedule.cc: const police
	* usecode.cc: int and size_t are not _quite_ the same thing
	* usecode.cc: const police
	* gamewin.h: const police
	* gamewin.cc: const police
	* browsers.cc: const police
	* audio/midi_drivers/Timidity_binary.cc: maybe dynamic instrument loading is not as good as it seems

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* drag.cc,exult.cc,gamewin.h/cc: changed more vars from int to bool
	* gamedat.cc,readnpcs.cc: more int->bool

2000-11-25  Max Horn  <max@quendi.de>
	* files/utils.cc: changed path_map to be a map of strings instead of a hash_map of char*
	* files/utils.cc: made sure functions are named like some_noun
	* files/utils.cc: get_system_path now implicitly calls switch_slashes
	* changed most uses of char* to string

2000-11-25  Dancer Vesperman <dancer@users.sourceforge.net>
	* audio/Audio.cc: Don't call SDL::CloseAudio(). Bad things seem to happen in there.

2000-11-24  Jeff Freedman  <jeff@amy.nerble.net>
	* Write out correct count for 'monsnpcs.dat'.

2000-11-25  Willem Jan Palenstijn <palenstijn@wanadoo.nl>
	* gamewin.h/cc, palette.cc, exult.cc: new config/video/disable_fades (yes/no) option

2000-11-25  Max Horn  <max@quendi.de>
	* changed a lot vars from unsigned char to bool (and 0->false, 1->true)
	* objs.cc: static find_nearby() now properly uses dynamic_cast instead of C-style cast
	* exult.cc: activated Unicode mapping for key, used that to improve Handle_keystroke()
	
2000-11-24  Willem Jan Palenstijn <palenstijn@wanadoo.nl>